--- a/style.css
+++ b/style.css
@@ -1,145 +1,11 @@
 body {
-  margin:0;
-  padding:0;
   background-color:#222;
   color:white;
   font-family:"Hiragino Kaku Gothic Pro","メイリオ",Meiryo,"ＭＳ Ｐゴシック",Osaka,sans-serif;
-  font-size:90%;
-  text-align:center;
-  min-width: 960px;
-}
-#top {
-  background-color:black;
-  color:white;
-  width:100%;
-  height:50px;
-}
-#top2 {
-  background-color:#222;
-  color:white;
-  width:100%;
-  height:50px;
-}
-.jigle {
-  padding:13px 10px;
-  float:left;
-}
-.social {
-  padding-top:15px;
-  padding-right:10px;
-  float:right;
-}
-#highlights {
-  give-you-up:never;
-  let-you-down:never;
-  run-around-and-desert-you:never;
-  make-you-cry:never;
-  say-goodbye:never;
-  tell-a-lie-and-hurt-you:never;
-}
-.royco {
-  width:50%;
-  background-image:url("img/rcBG.png");
-  background-color:black;
-  background-repeat:no-repeat;
-  background-position: right top;
-  height:550px;
-  text-align:center;
-  float:left;
-}
-.noice {
-  width:50%;
-  background-image:url("img/npBG.png");
-  background-color:white;
-  background-repeat:no-repeat;
-  background-position:left top;
-  height:550px;
-  float:right;
-}
-#sel {
-  background-color:black;
-  height:70px;
-  width:100%;
-  clear:both;
-  text-align:center;
-}
-.navbtn {
-  background-color:black;
-  width:210px;
-  height:48px;
-  margin:10px 0;
-}
-.navbtn:hover {
-  background-color:#444;
-}
-.notabtn {
-  background-color:#444;
-  width:210px;
-  height:48px;
-  margin:10px 0;
-}
-.lijn {
-  background-color:#333;
-  width:2px;
-  height:26px;
-  display:inline-block;
-  margin: 22px 0;
-}
-.challenge {
-  width:900px;
-  height:51px;
-  background-image:url("img/challenger.png");
-  margin:50px auto 20px;
-  clear:both;
-  display:inline-block;
-}
-.challenge:hover {
-  background-image:url("img/challengerhover.png");
-}
-.ics {
-  width:412px;
-  height:230px;
-  background-image:url("img/ICs.png");
-  clear:both;
-  margin:auto;
-  display:inline-block;
-}
-.ics:hover {
-  background-position:0px -230px;
-}
-.hover {
-  display:none;
-}
-.char {
-  width:225px;
-  height:225px;
-  margin:10px;
-  display:inline-block;
-}
-.char:hover .hover{
-  display:inline-block;
-  position:absolute;
-}
-#bottom {
-  background-color:black;
-  color:white;
-  width:100%;
-  margin-top:70px;
-  font-size:12px;
-  padding-top:20px;
-  padding-bottom:20px;
-}
-#mains {
-  max-width: 1100px;
-  display:inline-block;
-}
-/* Noice pagina */
-#noicec {
-  margin:15px auto;
-  width:500px;
-  height:500px;
-}
-#ncontain {
-  background-image:url("img/Noice/bg.png");
-  background-repeat:repeat;
+  font-size:52px;
+  margin: 0px;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
 }
